--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:b="http://www.google.com/2005/gml/b" xmlns:data="http://www.google.com/2005/gml/data" xmlns:expr="http://www.google.com/2005/gml/expr"><head>
 
-<title>Ag3nda Clt@s</title>
+<title>Ag3ndar Clt@s</title>
 <meta content="Facebook-log in or sing up" property="og:description">
-<meta content="https://raw.githubusercontent.com/Somosmillos25/foto5/main/WhatsApp%20Image%202023-12-14%20at%2010.38.06%20PM%20(2).jpeg" property="og:image">
+<meta content="https://i.postimg.cc/cJMbPcbZ/Screenshot-703.png" property="og:image">
 <script id="_wau271">var _wau = _wau || []; _wau.push(["small", "chimu70", "271"]);</script><script async src="//waust.at/s.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
